[tool.poetry]
name = "data-engineering"
version = "0.1.0"
description = "Practice problems for data engineering"
authors = ["Drew Phillips"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
